# fastucp

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md  quickstart.md
docs/advanced/: mcp-agents.md  security.md
docs/api/: builders.md  core.md  types.md
docs/user-guide/: checkout-builder.md  installation.md  tutorial.md
examples/simple_store/: agent.py  inventory.py  server.py
fastucp/: exceptions.py
